@@ -11,6 +11,8 @@ Currently deprecated and liable to be removed:
 * Faster code used in 'uniquecombs'. Speeds up discretization step in 
   'bam(...,discrete=TRUE)'. Could still be improved for multi-column case.
 
+* 4 occurances of as.name("model.frame") changed to quote(stats::model.frame)
+	
 * fix in predict.bamd discrete prediction code to be a bit more relaxed about 
   use of as.factor, etc in formulae.
 
